--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <script src="script.js"></script>
   </head>
   <body>
+    <h1>A simple Search Engine</h1>
     <form>
       <input type="text"id="search" placeholder="Type here to search" required>
       <button type="submit" onclick="search()">Search</button>
-      <a href="https://chatgpt.com/" id="ChatGpt" style="display:none">ChatGPT</a>
     </form>
+    <a href="https://chatgpt.com/" id="ChatGPT" style="display:none">ChatGPT</a>
   </body>
 </html>
