--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   </head>
   <body>
     <h1>A simple Search Engine</h1>
-    <form>
+    <form style="
+      margin-top: 20%;
+      margin-left: 40%;
+    ">
       <input type="text"id="search" placeholder="Type here to search" required>
       <button type="submit" onclick="search()">Search</button>
     </form>
