--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     ">
       <h1>A simple Search Engine</h1>
       <input type="text"id="search" placeholder="Type here to search" required>
-      <button type="submit" onclick="search()">Search</button>
+      <button onclick="search()">Search</button>
     </form>
     <a href="https://chatgpt.com/" id="ChatGPT" style="display:none">ChatGPT</a>
   </body>
