--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <title>A Simple Search Engine</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script>
+      function search(){
+         alert("Button Successful!!!!");
+      }
+    </script>
   </head>
   <body>
     <form style="
